--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server-template-nodejs",
+  "name": "dissipate",
   "version": "0.0.1",
   "private": true,
   "author": "Jeswin Kumar<jeswinpk@agilehead.com>",
@@ -24,6 +24,7 @@
     "@types/koa-session": "^5.10.2",
     "@types/node": "^13.13.4",
     "@types/pg": "^7.14.3",
+    "@types/redis": "^2.8.20",
     "@types/yargs": "^15.0.4",
     "grant-koa": "^5.0.1",
     "jsonwebtoken": "^8.5.1",
@@ -32,8 +33,10 @@
     "koa-mount": "^4.0.0",
     "koa-router": "^8.0.8",
     "koa-session": "^6.0.0",
+    "node-redis": "^0.1.7",
     "pg": "^8.0.3",
     "psychopiggy": "^2.0.2",
+    "redis": "^3.0.2",
     "yargs": "^15.3.1"
   },
   "devDependencies": {
