--- a/package.json
+++ b/package.json
@@ -1,41 +1,30 @@
 {
   "name": "dissipate",
   "version": "0.0.1",
-  "private": true,
   "author": "Jeswin Kumar<jeswinpk@agilehead.com>",
   "contributors": [
     "Jeswin Kumar<jeswinpk@agilehead.com>"
   ],
   "scripts": {
-    "transpile": "./build.sh",
+    "build": "./build.sh",
     "test": "./build.sh && mocha --exit dist/test/test.js"
   },
   "bin": {
-    "server-template-nodejs": "dist/index.js"
+    "dissipate": "dist/index.js"
   },
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "dependencies": {
-    "@types/jsonwebtoken": "^8.3.9",
     "@types/koa": "^2.11.3",
     "@types/koa-bodyparser": "^4.3.0",
-    "@types/koa-mount": "^4.0.0",
     "@types/koa-router": "^7.4.0",
-    "@types/koa-session": "^5.10.2",
     "@types/node": "^13.13.4",
-    "@types/pg": "^7.14.3",
     "@types/redis": "^2.8.20",
     "@types/yargs": "^15.0.4",
-    "grant-koa": "^5.0.1",
-    "jsonwebtoken": "^8.5.1",
     "koa": "^2.11.0",
     "koa-bodyparser": "^4.3.0",
-    "koa-mount": "^4.0.0",
     "koa-router": "^8.0.8",
-    "koa-session": "^6.0.0",
     "node-redis": "^0.1.7",
-    "pg": "^8.0.3",
-    "psychopiggy": "^2.0.2",
     "redis": "^3.0.2",
     "yargs": "^15.3.1"
   },
