--- a/package.json
+++ b/package.json
@@ -1,42 +1,7 @@
 {
-  "name": "retransmit",
-  "version": "0.1.0",
-  "author": "Jeswin Kumar<jeswinpk@agilehead.com>",
-  "contributors": [
-    "Jeswin Kumar<jeswinpk@agilehead.com>"
-  ],
-  "scripts": {
-    "build": "./build.sh",
-    "test": "./build.sh && mocha --exit dist/test/test.js --timeout 5000"
-  },
-  "bin": {
-    "retransmit": "dist/index.js"
-  },
-  "main": "dist/index.js",
-  "types": "dist/index.d.ts",
-  "dependencies": {
-    "@koa/cors": "^3.1.0",
-    "@types/koa": "^2.11.3",
-    "@types/koa-bodyparser": "^4.3.0",
-    "@types/koa-router": "^7.4.0",
-    "@types/node": "^13.13.12",
-    "@types/redis": "^2.8.20",
-    "@types/ws": "^7.2.4",
-    "@types/yargs": "^15.0.4",
-    "got": "^11.1.4",
-    "koa": "^2.11.0",
-    "koa-bodyparser": "^4.3.0",
-    "koa-router": "^8.0.8",
-    "node-redis": "^0.1.7",
-    "redis": "^3.0.2",
-    "ws": "^7.3.0",
-    "yargs": "^15.3.1"
-  },
+  "name": "root",
+  "private": true,
   "devDependencies": {
-    "@types/mocha": "^7.0.2",
-    "@types/should": "^13.0.0",
-    "mocha": "^7.1.2",
-    "should": "^13.2.3"
-  },
-  "license": "MIT"
+    "lerna": "^3.22.1"
+  }
 }
