--- a/packages/retransmit-plugin-httpclient-redis/package.json
+++ b/packages/retransmit-plugin-httpclient-redis/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "retransmit",
+  "name": "retransmit-plugin-httpclient-redis",
   "version": "0.1.1",
   "author": "Jeswin Kumar<jeswinpk@agilehead.com>",
   "contributors": [
