--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "retransmit",
-  "version": "0.10.0",
+  "version": "0.12.0",
   "author": "Jeswin Kumar<jeswinpk@agilehead.com>",
   "contributors": [
     "Jeswin Kumar<jeswinpk@agilehead.com>"
@@ -16,6 +16,7 @@
   "types": "dist/index.d.ts",
   "dependencies": {
     "@koa/cors": "^3.1.0",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/koa": "^2.11.3",
     "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-router": "^7.4.1",
@@ -24,6 +25,7 @@
     "@types/ws": "^7.2.5",
     "@types/yargs": "^15.0.5",
     "got": "^11.3.0",
+    "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.0",
     "koa-bodyparser": "^4.3.0",
     "koa-router": "^9.0.1",
