--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "@koa/cors": "^3.1.0",
     "@types/jsonwebtoken": "^8.5.0",
     "@types/koa": "^2.11.3",
-    "@types/koa-bodyparser": "^4.3.0",
     "@types/koa-router": "^7.4.1",
     "@types/node": "^14.0.14",
     "@types/redis": "^2.8.22",
@@ -27,7 +26,7 @@
     "got": "^11.3.0",
     "jsonwebtoken": "^8.5.1",
     "koa": "^2.13.0",
-    "koa-bodyparser": "^4.3.0",
+    "koa-body": "^4.2.0",
     "koa-router": "^9.0.1",
     "node-redis": "^0.1.7",
     "redis": "^3.0.2",
