--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "retransmit",
+  "name": "@retransmit/retransmit",
+  "private": false,
   "version": "0.19.0",
   "author": "Jeswin Kumar<jeswinpk@agilehead.com>",
   "contributors": [
