Rename to prism

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@retransmit/gateway",
+  "name": "@retransmit/prism",
   "private": false,
   "version": "0.19.1",
   "author": "Jeswin Kumar<jeswinpk@agilehead.com>",
