--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "@retransmit/prism",
   "private": false,
-  "version": "1.1.1",
+  "version": "1.1.2",
   "author": "Jeswin Kumar<jeswinpk@agilehead.com>",
   "contributors": [
     "Jeswin Kumar<jeswinpk@agilehead.com>"
   ],
   "scripts": {
     "build": "./build.sh",
-    "test": "./build.sh && mocha --exit dist/test/integration/index.js --timeout 2000"
+    "test": "./build.sh && npx mocha --exit dist/test/integration/index.js --timeout 2000"
   },
   "bin": {
     "prism": "dist/index.js"
@@ -17,33 +17,34 @@
   "types": "dist/index.d.ts",
   "dependencies": {
     "@koa/cors": "^3.1.0",
-    "@types/jsonwebtoken": "^8.5.0",
-    "@types/koa": "^2.11.3",
-    "@types/koa-router": "^7.4.1",
-    "@types/node": "^14.0.27",
-    "@types/redis": "^2.8.25",
-    "@types/ws": "^7.2.6",
-    "@types/yargs": "^15.0.5",
-    "got": "^11.5.2",
+    "@types/jsonwebtoken": "^8.5.1",
+    "@types/koa": "^2.13.1",
+    "@types/koa-router": "^7.4.2",
+    "@types/node": "^14.14.41",
+    "@types/redis": "^2.8.28",
+    "@types/ws": "^7.4.1",
+    "@types/yargs": "^16.0.1",
+    "got": "^11.8.2",
     "jsonwebtoken": "^8.5.1",
-    "koa": "^2.13.0",
+    "koa": "^2.13.1",
     "koa-body": "^4.2.0",
-    "koa-router": "^9.1.0",
+    "koa-router": "^10.0.0",
     "node-redis": "^0.1.7",
-    "redis": "^3.0.2",
-    "ws": "^7.3.1",
-    "yargs": "^15.4.1"
+    "redis": "^3.1.2",
+    "ws": "^7.4.5",
+    "yargs": "^16.2.0"
   },
   "devDependencies": {
     "@types/koa-mount": "^4.0.0",
     "@types/koa-static": "^4.0.1",
-    "@types/mocha": "^8.0.2",
+    "@types/mocha": "^8.2.2",
     "@types/should": "^13.0.0",
-    "get-stream": "^6.0.0",
+    "get-stream": "^6.0.1",
     "koa-mount": "^4.0.0",
     "koa-static": "^5.0.0",
-    "mocha": "^8.1.1",
-    "should": "^13.2.3"
+    "mocha": "^8.3.2",
+    "should": "^13.2.3",
+    "typescript": "^4.2.4"
   },
   "license": "MIT"
 }
